--- a/static/css/main.css
+++ b/static/css/main.css
@@ -143,7 +143,7 @@ Slide Show On Banner
 	top: auto;
 	height: 100vh;
 	width: 100%;
-	transition: opacity 2s ease-in-out; 
+	/* transition: cubic-bezier(0.39, 0.575, 0.565, 1);  */
 	display: none;
 }
 .active {
@@ -156,7 +156,7 @@ Slide Show On Banner
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	transition: opacity 2s ease-in-out;
+	/* transition: opacity 2s ease-in-out; */
 }
 
 
@@ -165,12 +165,21 @@ Banner text
 *******************/
 #banner .slideshow-text {
 	position: absolute;
-	top: 50%;
+	top: 45%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	text-align: center;
 }
-
+#banner .slideshow-text h1 {
+	color: #d8be17;
+	text-shadow: 2px 2px #000;
+	font-size: 4.5rem;
+}
+#banner .slideshow-text p {
+	font-size: 1.9rem;
+	color: #e0d7d7;
+	text-shadow: 2px 2px #000;
+}
 #banner .products-cat {
 	position: relative;
 	top: -650px;
