modify media queries

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,13 +14,14 @@
 <body>
 	<header id="header">
 		<div class="container-support">
-			
+			<a href="#">+254 723 461740 / +254 726 266090</a>
+			<a href="#">floreabloms@gmail.com</a>
 			<a href="#" target="_blank">Instagram</a>
 			<a href="#" target="_blank">Facebook</a>
 		</div>
 		<div class="container-header">
 			<div id="logo-image">
-				<a href="index.html"> <img src="../static/img/florea_logo.png"></a>
+				<a href="index.html"> <img src="../static/img/logos/florea_logo10.png"></a>
 			</div>
 			<div corporate-name>
 				<h4>Florea Blooms</h4>
