--- a/static/css/main.css
+++ b/static/css/main.css
@@ -170,6 +170,19 @@ Banner text
 	transform: translate(-50%, -50%);
 	text-align: center;
 }
+#banner .slideshow-text.florea-slogan {
+	/* background-color: rgba(0,0,0,0.2);
+	border-radius: 5px;
+	box-shadow: 4px 4px 6px #333; */
+	padding: 12px;
+	width: 60%;
+}
+#banner .slideshow-text.florea-slogan h1 {
+	font-size: 3.2rem;
+}
+#banner .slideshow-text.florea-slogan p {
+	font-family: Georgia, 'Times New Roman', Times, serif;
+}
 #banner .slideshow-text h1 {
 	color: #ffd700;
 	text-shadow: 2px 2px #000;
@@ -411,9 +424,9 @@ Products section
 /***********************
 SLIDES
 ************************/
-#slides {
-	
-}
+/* #slides {
+
+} */
 #slides .slider {
 	width: 100%;
 	min-height: 50vh;
@@ -542,14 +555,14 @@ Media query: Less than 768px;
 	/*Corporate logo*/
 	#logo-image {
 		position: absolute;
-		bottom: -20px;
+		bottom: 0;
 		left: 0;
 		width: 50%;
 		height: auto;
 		justify-content: flex-start;
 	}
 	#logo-image img{
-		margin-top: 0px;
+		margin-top: 0;
 		margin-left: 0;
 		width: 30%;
 		height: auto;
@@ -561,12 +574,16 @@ Media query: Less than 768px;
 		margin: auto;
 	}
 	.container-support a {
-		padding: 2px 14px;
+		padding: 2px 14px; 
+		font-size: 0.825rem;
+	}
+	.container-support a.facebook_cont {
+		display: none;
 	}
 
 	#banner {
 		background: #fff;
-		height: 200vh;
+		height: auto;
 	}
 	.banner {
 		background: none;
@@ -644,6 +661,7 @@ Media query: Less than 768px;
 	#products .product-content h1,
 	#products .product-content p {
 		width: 90%;
+		padding: 1rem;
 	}
 	#products .product-content a {
 		width: 50%;
