--- a/templates/products.html
+++ b/templates/products.html
@@ -10,16 +10,44 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/responsive_topnav.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/products.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
+	<!-- Social media styling -->
+	<style>
+		.fa {
+			padding: 20px;
+			font-size: 30px;
+			width: 30px;
+			text-align: center;
+			text-decoration: none;
+			margin: 5px 2px;
+			border-radius: 0%;
+		}
+	
+		.fa:hover {
+			opacity: 0.7;
+		}
+	
+		.fa-facebook {
+			background: #3B5998;
+			color: white;
+		}
+	
+		.fa-instagram {
+			background: #125688;
+			color: white;
+		}
+	</style>
 </head>
 <body>
 
 	<!--start header-->
 	<header id="header">
 		<div class="container-support">
-			<a href="#">+254 723 461740 / +254 726 266090</a>
+			<a href="#">+254 792 188324</a>
 			<a href="#">floreabloms@gmail.com</a>
-			<a href="#" target="_blank">Instagram</a>
-			<a href="#" target="_blank">Facebook</a>
+			<a href="#" class="instagram_cont fa fa-instagram" target="_blank"></a>
+			<a href="#" class="facebook_cont fa fa-facebook" target="_blank"></a>
 			
 		</div>
 		<div class="container-header">
@@ -646,9 +674,8 @@
 			<p>
 				Florea Blooms<br>
 				JKIA, Nairobi Kenya,<br>
-				floreabloms@gmail.com <br>
-				
-				+254723461740 &nbsp;|&nbsp; +254723461740<br>
+				floreablooms@gmail.com <br>
+				+254 792 188 324 &nbsp;|| &nbsp; +254 726 876 947<br>
 			</p>
 		</div>
 		<hr>
