--- a/static/css/main.css
+++ b/static/css/main.css
@@ -577,7 +577,7 @@ Media query: Less than 768px;
 		padding: 2px 14px; 
 		font-size: 0.825rem;
 	}
-	.container-support a.facebook_cont,
+	/* .container-support a.facebook_cont, */
 	.container-support a.email_cont {
 		display: none;
 	}
