--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -121,7 +121,7 @@
 			<p>
 				Florea Blooms<br>
 				JKIA, Nairobi Kenya,<br>
-				floreabloms@gmail.com <br>				
+				floreablooms@gmail.com <br>				
 				+254 792 188 324 &nbsp; || &nbsp; +254 726 876 947<br>
 			</p>
 		</div>
