--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -50,7 +50,7 @@
 		</div>
 		<div class="container-header">
 			<div id="logo-image">
-				<a href="index.html"> <img src="../static/img/logos/florea_logo10.png"></a>
+				<a href="index.html"> <img src="../static/img/logos/florea_logo_preview_17.png"></a>
 			</div>
 			<div corporate-name>
 				<h4>Florea Blooms</h4>
@@ -86,8 +86,8 @@
 				</div>
 				<div class="contacts-box contact-phone">
 					<p>
-						+254723461740 &nbsp;|&nbsp; <br>
-						+254723461740 <br>
+						+254 792 188 324 &nbsp; &nbsp; <br>
+						+254 726 876 947 <br>
 					</p>
 				</div>
 			</div>
@@ -98,7 +98,7 @@
 				<div class="contacts-box contact-email">
 					<p>
 						
-						floreabloms@gmail.com <br>
+						floreablooms@gmail.com <br>
 					</p>
 				</div>
 			</div>
