--- a/templates/products.html
+++ b/templates/products.html
@@ -78,6 +78,7 @@
 			<button class="btn" onclick="filterSelection('spray-roses')"> Spray Roses</button>
 			<button class="btn" onclick="filterSelection('crysanthemums')"> Crysanthemums</button>
 			<button class="btn" onclick="filterSelection('gypsophila')"> Gypsophila</button>
+			<button class="btn" onclick="filterSelection('alstromeria')"> Alstromeria</button>
 			<button class="btn" onclick="filterSelection('rosemary')"> Rosemary</button>
 			<button class="btn" onclick="filterSelection('eucalyptus')"> Eucalyptus</button>
 			<button class="btn" onclick="filterSelection('other-plants')"> Other Plants</button>
@@ -624,6 +625,31 @@
 					Vase Life: 21 days <br>
 				</p>
 			</div>
+			<div class="content-container alstromeria">
+				<img src="../static/img/products/alstromeria_lady_marmalade.jpg">
+				<h2>ALSTROMERIA</h2>
+				<p>
+					Variety: Lady Marmalade
+			
+				</p>
+			</div>
+			<div class="content-container alstromeria">
+				<img src="../static/img/products/alstromeria_lovely.jpg">
+				<h2>ALSTROMERIA</h2>
+				<p>
+					Variety: Lovely
+				
+				</p>
+			</div>
+			<div class="content-container alstromeria">
+				<img src="../static/img/products/alstromeria_beluga.jpg">
+				<h2>ALSTROMERIA</h2>
+				<p>
+					Variety: Beluga
+				
+				</p>
+			</div>
+
 			<div class="content-container eucalyptus">
 				<img src="../static/img/products/baby_blue.jpg">
 				<h2>Baby Blue - Eucalyptus</h2>
